Added tuple testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
 
     add_executable(test_fft tests/test_fft.cpp)
     add_executable(test_simd tests/test_simd.cpp)
+    add_executable(test_tuples tests/test_tuples.cpp)
 
     target_link_libraries(test_fft PUBLIC pcx)
     set_target_properties(test_fft PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED True)
@@ -21,7 +22,11 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
     target_link_libraries(test_simd PUBLIC pcx)
     set_target_properties(test_simd PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED True)
     target_compile_options(test_simd PRIVATE -save-temps -march=native)
-    ENABLE_TESTING()
 
+    target_link_libraries(test_tuples PUBLIC pcx)
+    set_target_properties(test_tuples PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED True)
+    target_compile_options(test_tuples PRIVATE -save-temps -march=native)
+
+    ENABLE_TESTING()
     add_test(NAME test_fft COMMAND test_fft)
 endif()
