Small inspection of genereated asm.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
         )
         target_compile_definitions(test_fft PUBLIC FULL_FFT_TEST)
     else()
-        set(FFT_NODE_SIZE 2)
+        set(FFT_NODE_SIZE 8)
         target_sources(test_fft PUBLIC
             tests/fft/f32_node${FFT_NODE_SIZE}.cpp
             tests/fft/f64_node${FFT_NODE_SIZE}.cpp
@@ -36,8 +36,13 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
         target_compile_definitions(test_fft PRIVATE -DFFT_NODE_SIZE=${FFT_NODE_SIZE})
     endif()
 
+    add_executable(asm_explorer tests/fft/asm_explorer.cpp)
     add_executable(test_simd tests/test_simd.cpp)
     add_executable(test_tuples tests/test_tuples.cpp)
+
+    target_link_libraries(asm_explorer PUBLIC pcx)
+    set_target_properties(asm_explorer PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED True)
+    target_compile_options(asm_explorer PRIVATE -save-temps -march=native -ftemplate-backtrace-limit=0)
 
     target_link_libraries(test_fft PUBLIC pcx)
     set_target_properties(test_fft PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED True)
