sketching bit reverse sort.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,12 +37,17 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
     endif()
 
     add_executable(asm_explorer tests/fft/asm_explorer.cpp)
+    add_executable(sort tests/fft/sort.cpp)
     add_executable(test_simd tests/test_simd.cpp)
     add_executable(test_tuples tests/test_tuples.cpp)
 
     target_link_libraries(asm_explorer PUBLIC pcx)
     set_target_properties(asm_explorer PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED True)
     target_compile_options(asm_explorer PRIVATE -save-temps -march=native -ftemplate-backtrace-limit=0)
+
+    target_link_libraries(sort PUBLIC pcx)
+    set_target_properties(sort PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED True)
+    target_compile_options(sort PRIVATE -save-temps -march=native -ftemplate-backtrace-limit=0)
 
     target_link_libraries(test_fft PUBLIC pcx)
     set_target_properties(test_fft PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED True)
