--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,20 +12,30 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
     set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
     add_executable(test_fft)
-    set(FULL_FFT_TEST OFF)
+    set(FULL_FFT_TEST ON)
+    set(SPLIT_COMPILATION ON)
     if(${FULL_FFT_TEST})
-        target_sources(test_fft PUBLIC
-            tests/fft/f32_node2.cpp
-            tests/fft/f32_node4.cpp
-            tests/fft/f32_node8.cpp
-            tests/fft/f32_node16.cpp
-            tests/fft/f64_node2.cpp
-            tests/fft/f64_node4.cpp
-            tests/fft/f64_node8.cpp
-            tests/fft/f64_node16.cpp
-            tests/fft/fft_main.cpp
-        )
+        if(${SPLIT_COMPILATION})
+            target_sources(test_fft PUBLIC
+                tests/fft/f32_node2.cpp
+                tests/fft/f32_node4.cpp
+                tests/fft/f32_node8.cpp
+                tests/fft/f32_node16.cpp
+                tests/fft/f64_node2.cpp
+                tests/fft/f64_node4.cpp
+                tests/fft/f64_node8.cpp
+                tests/fft/f64_node16.cpp
+                tests/fft/fft_main.cpp
+            )
+        else()
+            target_sources(test_fft PUBLIC
+                tests/fft/fft_main.cpp
+            )
+            target_compile_definitions(test_fft PRIVATE -DNO_SPLIT_COMPILE)
+        endif()
         target_compile_definitions(test_fft PUBLIC FULL_FFT_TEST)
+        set_property(GLOBAL PROPERTY JOB_POOLS build_jobs=1)
+        set_property(TARGET test_fft PROPERTY JOB_POOL_COMPILE build_jobs)
     else()
         set(FFT_NODE_SIZE 8)
         target_sources(test_fft PUBLIC
@@ -51,7 +61,7 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
 
     target_link_libraries(test_fft PUBLIC pcx)
     set_target_properties(test_fft PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED True)
-    target_compile_options(test_fft PRIVATE -save-temps -march=native -ftemplate-backtrace-limit=0)
+    target_compile_options(test_fft PRIVATE -march=native #[[ -ftemplate-backtrace-limit=0 ]])
 
     target_link_libraries(test_simd PUBLIC pcx)
     set_target_properties(test_simd PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED True)
