--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
     set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
     add_executable(test_fft)
-    set(FULL_FFT_TEST OFF)
+    set(FULL_FFT_TEST ON)
     set(SPLIT_COMPILATION ON)
     if(${FULL_FFT_TEST})
         if(${SPLIT_COMPILATION})
@@ -25,12 +25,18 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
                 tests/fft/par_f32_w4.cpp
                 tests/fft/par_f32_w8.cpp
                 tests/fft/par_f32_w16.cpp
+                tests/fft/parc_f32_w4.cpp
+                tests/fft/parc_f32_w8.cpp
+                tests/fft/parc_f32_w16.cpp
                 tests/fft/f32_w4.cpp
                 tests/fft/f32_w8.cpp
                 tests/fft/f32_w16.cpp
                 tests/fft/par_f64_w2.cpp
                 tests/fft/par_f64_w4.cpp
                 tests/fft/par_f64_w8.cpp
+                tests/fft/parc_f64_w2.cpp
+                tests/fft/parc_f64_w4.cpp
+                tests/fft/parc_f64_w8.cpp
                 tests/fft/f64_w2.cpp
                 tests/fft/f64_w4.cpp
                 tests/fft/f64_w8.cpp
