Split node sizes into different test files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
     set(F64_WIDTHS 1 2 4 8)
     # set(F32_WIDTHS 1 2)
     # set(F64_WIDTHS 1)
-    set(NODE_SIZES 2 4 8 16)
+    set(NODE_SIZES 16 8 4 2)
     # set(F32_WIDTHS  16)
     # set(F64_WIDTHS  8)
     # set(NODE_SIZES 2)
@@ -38,27 +38,30 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
     set(TEST_SEQ ON)
 
     set(TEST_FFT_SOURCES "")
-    function(generate_tests PROTOTYPE TYPE WIDTHS)
-        foreach(WIDTH ${WIDTHS})
-            set(L_FILE  "test_sources/${TYPE}_${PROTOTYPE}_${WIDTH}.cpp")
-            set(FLOAT_TYPE ${TYPE})
-            set(VECTOR_WIDTH ${WIDTH})
-            configure_file("tests/fft/prototype_${PROTOTYPE}.cpp" "${L_FILE}")
-            set(TEST_FFT_SOURCES "${TEST_FFT_SOURCES}" "${L_FILE}")
+    function(generate_tests PROTOTYPE TYPE WIDTHS NODE_SIZES)
+        foreach(NS ${NODE_SIZES})
+            set(NODE_SIZE ${NS})
+            foreach(WIDTH ${WIDTHS})
+                set(L_FILE  "test_sources/${TYPE}_${PROTOTYPE}_ns${NS}_w${WIDTH}.cpp")
+                set(FLOAT_TYPE ${TYPE})
+                set(VECTOR_WIDTH ${WIDTH})
+                configure_file("tests/fft/prototype_${PROTOTYPE}.cpp" "${L_FILE}")
+                set(TEST_FFT_SOURCES "${TEST_FFT_SOURCES}" "${L_FILE}")
+            endforeach()
         endforeach()
         return(PROPAGATE TEST_FFT_SOURCES)
     endfunction()
     if (${TEST_SEQ})
-        generate_tests(seq f32 "${F32_WIDTHS}")
-        generate_tests(seq f64 "${F64_WIDTHS}")
+        generate_tests(seq f32 "${F32_WIDTHS}" "${NODE_SIZES}")
+        generate_tests(seq f64 "${F64_WIDTHS}" "${NODE_SIZES}")
     endif()
     if (${TEST_PAR})
-        generate_tests(par f32 "${F32_WIDTHS}")
-        generate_tests(par f64 "${F64_WIDTHS}")
+        generate_tests(par f32 "${F32_WIDTHS}" "${NODE_SIZES}")
+        generate_tests(par f64 "${F64_WIDTHS}" "${NODE_SIZES}")
     endif()
     if (${TEST_PARC})
-        generate_tests(parc f32 "${F32_WIDTHS}")
-        generate_tests(parc f64 "${F64_WIDTHS}")
+        generate_tests(parc f32 "${F32_WIDTHS}" "${NODE_SIZES}")
+        generate_tests(parc f64 "${F64_WIDTHS}" "${NODE_SIZES}")
     endif()
     set(TEST_FFT_SOURCES "${TEST_FFT_SOURCES}"
         tests/fft/common.cpp
@@ -76,7 +79,7 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
         "-DPCX_TESTING_PAR=$<BOOL:${TEST_PAR}>"
         "-DPCX_TESTING_PARC=$<BOOL:${TEST_PARC}>"
     )
-    set_property(GLOBAL PROPERTY JOB_POOLS build_jobs=3)
+    set_property(GLOBAL PROPERTY JOB_POOLS build_jobs=6)
     set_property(TARGET test_fft PROPERTY JOB_POOL_COMPILE build_jobs)
 
     add_executable(asm_explorer tests/fft/asm_explorer.cpp)
