--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,23 @@
 cmake_minimum_required(VERSION 3.25)
 project(pcx VERSION 0.3.0 LANGUAGES CXX)
 
-# add_library(pcx STATIC
-#     ${CMAKE_CURRENT_SOURCE_DIR}/src/fft.cpp
-#     ${CMAKE_CURRENT_SOURCE_DIR}/src/par_fft.cpp
-# )
-# target_include_directories(pcx PUBLIC
-#     ${CMAKE_CURRENT_SOURCE_DIR}/inc
-#     )
-# target_compile_options(pcx PRIVATE -march=native -O3)
-# target_compile_definitions(pcx PUBLIC -DPCX_AVX512)
-
-add_library(pcx INTERFACE)
-target_include_directories(pcx INTERFACE
+add_library(pcx STATIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/fft.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/par_fft.cpp
+)
+target_include_directories(pcx PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/inc
     )
-target_compile_definitions(pcx INTERFACE -DPCX_AVX512)
+target_compile_options(pcx PRIVATE -march=native -O3)
+target_compile_definitions(pcx PUBLIC -DPCX_AVX512)
+
+# add_library(pcx INTERFACE)
+# target_include_directories(pcx INTERFACE
+#     ${CMAKE_CURRENT_SOURCE_DIR}/inc
+#     )
+# target_compile_definitions(pcx INTERFACE -DPCX_AVX512)
 
 set_target_properties(pcx PROPERTIES CXX_STANDARD 23 CXX_STANDARD_REQUIRED True)
-
 
 if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
     set(CMAKE_CXX_FLAGS_RELEASE "-O3")
