--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,8 @@ project(pcx
     VERSION 0.5.0
     LANGUAGES CXX
 )
-add_library(pcx)
-add_library(pcx::pcx ALIAS pcx)
-# add_library(pcx_header_only)
-# add_library(pcx::pcx_header_only ALIAS pcx_header_only)
+
+# general settings
 
 string(COMPARE EQUAL
     "${CMAKE_SOURCE_DIR}"
@@ -14,21 +12,64 @@ string(COMPARE EQUAL
     is_top_level)
 
 option(PCX_AVX512 "Compile with avx512 support" ON)
+option(PCX_INSTALL "Generate target for installing mylib" ${is_top_level})
 
+if(NOT DEFINED PCX_SIMD_BACKEND)
+    set(PCX_SIMD_BACKEND "x86_instrinsics"
+        CACHE
+        STRING "Backend for pcx SIMD instructions")
+endif()
+if(NOT DEFINED PCX_INSTALL_CMAKEDIR )
+    set(PCX_INSTALL_CMAKEDIR
+        "${CMAKE_INSTALL_LIBDIR}/cmake/pcx"
+        CACHE
+        STRING "Install path for pcx package-related CMake files"
+    )
+endif()
+if(DEFINED PCX_SHARED_LIBS)
+    set(BUILD_SHARED_LIBS ${PCX_SHARED_LIBS})
+endif()
+
+if(NOT DEFINED CMAKE_BUILD_TYPE AND NOT DEFINED CMAKE_CONFIGURATION_TYPES)
+    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
+    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
+endif()
 if(NOT DEFINED CMAKE_CXX_VISIBILITY_PRESET)
     set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 endif()
-if(NOT DEFINED CMAKE_VISIBILITY_INLINES_HIDDEN )
+if(NOT DEFINED CMAKE_VISIBILITY_INLINES_HIDDEN)
     set(CMAKE_VISIBILITY_INLINES_HIDDEN  ON)
 endif()
 
+add_library(pcx)
+add_library(pcx::pcx ALIAS pcx)
+# add_library(pcx_header_only)
+# add_library(pcx::pcx_header_only ALIAS pcx_header_only)
 
 # ---
 # Sources
 # ---
 set(public_headers
     include/pcx/fft.hpp
+    include/pcx/include/fft/fft_impl.hpp
+    include/pcx/include/fft/permuters.hpp
+    include/pcx/include/fft/util.hpp
+    include/pcx/include/simd/common.hpp
+    include/pcx/include/simd/math.hpp
+    include/pcx/include/simd/traits.hpp
+    include/pcx/include/meta.hpp
+    include/pcx/include/tupi.hpp
+    include/pcx/include/tuple.hpp
+    include/pcx/include/types.hpp
 )
+if(PCX_BACKEND EQUAL "x86_intrinsics")
+    set(public_headers
+        ${public_headers}
+        include/pcx/include/simd/x86/f32-traits.hpp
+        include/pcx/include/simd/x86/f64-traits.hpp
+    )
+endif()
+
 set(sources
     ${public_headers}
     src/fft.cpp
@@ -57,14 +98,51 @@ set_target_properties(pcx PROPERTIES
     CXX_STANDARD 23
     CXX_STANDARD_REQUIRED True
 )
-target_compile_options(pcx PRIVATE -march=native #[[ -O3 ]])
+target_compile_options(pcx PRIVATE -march=native)
+if(PCX_AVX512)
+    target_compile_definitions(pcx PUBLIC -DPCX_AVX512)
+endif()
 
 # ---
 # target config
 # ---
 
+include(CMakePackageConfigHelpers)
+if(PCX_INSTALL AND NOT CMAKE_SKIP_INSTALL_RULES)
+    configure_package_config_file(cmake/pcx-config.cmake.in
+        pcx-config.cmake
+        INSTALL_DESTINATION "${PCX_INSTALL_CMAKEDIR}"
+    )
+    write_basic_package_version_file(pcx-config-version.cmake
+        COMPATIBILITY SameMajorVersion
+    )
+    install(TARGETS pcx
+        EXPORT pcx_export
+        RUNTIME COMPONENT pcx
+        LIBRARY COMPONENT pcx
+        NAMELINK_COMPONENT pcx-dev
+        ARCHIVE COMPONENT pcx-dev
+        INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+    )
+    set(targets_file "pcx-shared-targets.cmake")
+    if(NOT BUILD_SHARED_LIBS)
+        set(targets_file "pcx-static-targets.cmake")
+    endif()
 
+    install(EXPORT pcx_export
+        COMPONENT pcx-dev
+        FILE "${targets_file}"
+        DESTINATION "${PCX_INSTALL_CMAKEDIR}"
+        NAMESPACE pcx::
+    )
 
+    install(FILES
+        "${CMAKE_CURRENT_BINARY_DIR}/pcx-config.cmake"
+        "${CMAKE_CURRENT_BINARY_DIR}/pcx-config-version.cmake"
+        COMPONENT pcx-dev
+        DESTINATION "${PCX_INSTALL_CMAKEDIR}"
+    )
+endif()
 
 # add_library(pcx STATIC
 #     ${CMAKE_CURRENT_SOURCE_DIR}/src/fft.cpp
@@ -73,8 +151,6 @@ target_compile_options(pcx PRIVATE -march=native #[[ -O3 ]])
 # target_include_directories(pcx PUBLIC
 #     ${CMAKE_CURRENT_SOURCE_DIR}/include
 #     )
-target_compile_options(pcx PRIVATE -march=native #[[ -O3 ]])
-target_compile_definitions(pcx PUBLIC -DPCX_AVX512)
 
 add_library(pcx_ho INTERFACE)
 target_include_directories(pcx_ho INTERFACE
