--- a/cmake/pcx-config.cmake.in
+++ b/cmake/pcx-config.cmake.in
@@ -4,7 +4,7 @@
 
 macro(import_targets type)
     if(NOT EXISTS "${CMAKE_CURRENT_LIST_DIR}/pcx-${type}-targets.cmake")
-        set(${CMAKE_FIND_PACKAGE_NAME}_NOT_FOUND_MESSAGE "mylib ${type} libraries were requested but not found")
+        set(${CMAKE_FIND_PACKAGE_NAME}_NOT_FOUND_MESSAGE "pcx ${type} libraries were requested but not found")
         set(${CMAKE_FIND_PACKAGE_NAME}_FOUND OFF)
         return()
     endif()
@@ -30,6 +30,6 @@ if(NOT TARGET pcx::pcx)
     endif()
 
     import_targets(${type})
-    check_required_components(mylib)
+    check_required_components(pcx)
     message("-- Found ${type} pcx (version ${${CMAKE_FIND_PACKAGE_NAME}_VERSION})")
 endif()
